--- a/TodoApp/src/app/components/lists/lists.component.html
+++ b/TodoApp/src/app/components/lists/lists.component.html
@@ -1,6 +1,25 @@
-<div class="">
+
     <p>Lists</p>
-</div>
-<div class="listItems">
-    
-</div>
+
+
+    <div class="btn">
+        <button
+          style="color: rgb(243, 147, 163)"
+          mat-icon-button
+        >
+          <mat-icon class="icons">shopping_cart</mat-icon>
+          <h1>Shopping</h1>
+        </button>
+        
+      </div>
+      <div class="btn">
+        <button 
+          style="color: rgb(243, 147, 163)" 
+          mat-icon-button
+          routerLink="/lists/-1/edit"
+        >
+          <mat-icon class="icons">add</mat-icon>
+          <h1>Add New</h1>
+        </button>
+        
+      </div>
