--- a/TodoApp/src/styles.css
+++ b/TodoApp/src/styles.css
@@ -15,3 +15,5 @@ div{
     margin: 0px;
     padding: 0px;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
