adding list details

--- a/TodoApp/src/app/components/edit-list/edit-list.component.html
+++ b/TodoApp/src/app/components/edit-list/edit-list.component.html
@@ -1,38 +1,37 @@
 
 <div class="formWarper"  >
-    <div class="form" [formGroup]="form">
+    <div class="form" [formGroup]="form" >
         <div class="form-field" *ngIf="get('caption') as field">
             <label>caption</label>
             <input type="text" formControlName="caption">
-
+            <app-errors-presenter [errors]="field.errors"></app-errors-presenter>
         </div>
 
         <div class="form-field" *ngIf="get('description') as field">
             <label>Descrption</label>
             <textarea rows="4" formControlName="description"></textarea>
+            <app-errors-presenter [errors]="field.errors"></app-errors-presenter>
         </div>
 
         <div class="form-field" *ngIf="get('color') as field">
             <label>color</label>
-            <select  formControlName="color">
-                <option [style.color]="'red'" value="red">red</option>
-                <option value="green">green</option>
-                <option value="blue">blue</option>
+            <select id="ctrlColor" formControlName="color" #selectedColor (change)="changeColor(selectedColor.value)" [style.color]="currentColor">
+                <option *ngFor="let color of colors" [style.color]="color" [selected]="currentColor===color">{{color}}</option>
             </select>
+            <app-errors-presenter [errors]="field.errors"></app-errors-presenter>
         </div>
 
-        <div class="form-field" [style.color]='color' *ngIf="get('icon') as field">
+        <div class="form-field"  *ngIf="get('icon') as field">
             <mat-form-field>
                 <label>icon</label>
                 <mat-select formControlName="icon">
-                    <mat-option selected-value="home"><mat-icon>home</mat-icon></mat-option>
-                    <mat-option selected-value="build"><mat-icon>build</mat-icon></mat-option>
+                    <mat-option value="home"><mat-icon>home</mat-icon></mat-option>
+                    <mat-option value="build"><mat-icon>build</mat-icon></mat-option>
                 </mat-select>
-                <!-- <app-errors-presenter [errors]="field.errors"></app-errors-presenter> -->
+                <app-errors-presenter [errors]="field.errors"></app-errors-presenter>
             </mat-form-field>
         </div>
     </div>
-
-    <button  (click)="onGo()">Save List</button>
+    <button [disabled]="form.invalid" type="submit" (click)="onGo()">Save List</button>
     
 </div>
