--- a/TodoApp/src/app/components/edit-list/edit-list.component.css
+++ b/TodoApp/src/app/components/edit-list/edit-list.component.css
@@ -1,6 +1,8 @@
 :host{
     display: flex;
-    flex-direction: column;
+    align-items: center;
+    justify-content:center;
+    margin-top: 20px;
 }
 mat-select{
     font-size: small;
@@ -54,3 +56,4 @@ button{
     margin: 10px;
     width: 60px;
 }
+
