adding get detail-list by id

--- a/TodoApp/src/app/components/info/info.component.html
+++ b/TodoApp/src/app/components/info/info.component.html
@@ -1,16 +1,16 @@
 <div class="iconList">
     <span class="material-icons">format_list_bulleted</span>
-    <h1>2</h1>
+    <h1 >{{listsCounter$|async}}</h1>
 </div>
 
 <div class="iconDoneAll">
     <span class="material-icons">done_all</span> 
-    <h1>2</h1>
+    <h1>{{itemsCounter$|async}}</h1>
 </div>
 
 <div class="iconWait">
     <span class="material-icons">hourglass_empty</span>
-    <h1>2</h1>
+    <h1>{{activeItemsCounter$|async}}</h1>
 </div>
    
      
