--- a/TodoApp/src/app/components/list-details/list-details.component.css
+++ b/TodoApp/src/app/components/list-details/list-details.component.css
@@ -52,3 +52,11 @@
 .list-detailsWarper{
     margin-left: 20px;
 }
+
+.completetrue{
+    text-decoration: line-through brown;
+}
+
+.completefalse{
+    
+}
