--- a/TodoApp/src/app/components/edit-list/edit-list.component.html
+++ b/TodoApp/src/app/components/edit-list/edit-list.component.html
@@ -15,7 +15,7 @@
 
         <div class="form-field" *ngIf="get('color') as field">
             <label>color</label>
-            <select #color id="ctrlColor" formControlName="color" #selectedColor (change)="changeColor(selectedColor.value)" [style.color]="currentColor">
+            <select #color formControlName="color" #selectedColor (change)="changeColor(selectedColor.value)" [style.color]="currentColor">
                 <option *ngFor="let color of colors" [style.color]="color" [selected]="currentColor===color">{{color}}</option>
             </select>
             <app-errors-presenter [errors]="field.errors"></app-errors-presenter>
@@ -24,9 +24,8 @@
         <div class="form-field"  *ngIf="get('icon') as field">
             <mat-form-field>
                 <label>icon</label>
-                <mat-select #icon formControlName="icon">
-                    <mat-option value="home"><mat-icon>home</mat-icon></mat-option>
-                    <mat-option value="build"><mat-icon>build</mat-icon></mat-option>
+                <mat-select #iconSelect formControlName="icon" (change)="changeIcon(iconSelect.value)" >
+                    <mat-option *ngFor="let icon of icons" [value]="icon" [style.color]="currentColor"><mat-icon>{{icon}}</mat-icon></mat-option>
                 </mat-select>
                 <app-errors-presenter [errors]="field.errors"></app-errors-presenter>
             </mat-form-field>
