--- a/TodoApp/src/app/components/home/home.component.html
+++ b/TodoApp/src/app/components/home/home.component.html
@@ -2,7 +2,7 @@
     <div class="mainHader">
         <h1>Todo App</h1>
         <h2>By Matan Poor</h2>
-        <h4>20/06/2021</h4>
+        <h4>{{today | date:"dd/MM/yyyy"}}</h4>
     </div>
     <div class="buttons">
         <button class="buttonNewList"
