--- a/TodoApp/src/app/components/info/info.component.html
+++ b/TodoApp/src/app/components/info/info.component.html
@@ -1,16 +1,19 @@
 <div class="iconList">
-    <span class="material-icons">format_list_bulleted</span>
+    <span  class="material-icons">format_list_bulleted</span>
     <h1 >{{listsCounter$|async}}</h1>
+    <p >Lists</p>
 </div>
 
 <div class="iconDoneAll">
     <span class="material-icons">done_all</span> 
     <h1>{{itemsCounter$|async}}</h1>
+    <p >ToDo Items</p>
 </div>
 
 <div class="iconWait">
     <span class="material-icons">hourglass_empty</span>
     <h1>{{activeItemsCounter$|async}}</h1>
+    <p >Active Items</p>
 </div>
    
      
