--- a/TodoApp/src/app/components/error-page/error-page.component.html
+++ b/TodoApp/src/app/components/error-page/error-page.component.html
@@ -1,9 +1,15 @@
-h1 404
-.cloak__wrapper
-  .cloak__container
-    .cloak
-.info
-  h2 We can't find that page
-  p.
-    We're fairly sure that page used to be here, but seems to have gone missing. We do apologise on it's behalf.
-  a(href="https://jhey.dev" target="_blank" rel="noreferrer noopener") Home
+<body>
+    <section class="notFound">
+        <div class="img">
+        <img src="https://assets.codepen.io/5647096/backToTheHomepage.png" alt="Back to the Homepage"/>
+        <img src="https://assets.codepen.io/5647096/Delorean.png" alt="El Delorean, El Doc y Marti McFly"/>
+        </div>
+        <div class="text">
+        <h1>404</h1>
+        <h2>PAGE NOT FOUND</h2>
+        <h3>BACK TO HOME?</h3>
+        <a href="#" class="yes">YES</a>
+        <a href="https://www.youtube.com/watch?v=G3AfIvJBcGo" target="_blank">NO</a>
+        </div>
+    </section>
+</body>
